--- a/theory.tex
+++ b/theory.tex
@@ -596,7 +596,7 @@ T -
 	{\epsLL}_{12}(\omega,\kk) & {\epsLL}_{22}(\omega,\kk) & {\epsLL}_{32}(\omega,\kk)  \\
 	{\epsLL}_{13}(\omega,\kk) & {\epsLL}_{23}(\omega,\kk) & {\epsLL}_{33}(\omega,\kk)  
 	\end{array} \right) \right] = 0. \label{eq_dispdetLL}\end{equation}
-If all tensor elements, ${\epsLL}_{ij}(\omega,\kk)$, can be approximated in the form of a polynomial expansion to a low order in $\kk$, the solution can again be found as roots of a characteristic polynomial. The degree of this polynomial may be substantially higher than in Eq. (\ref{eq_dispdet}), the dispersion curves can nonetheless be found by a brutal-force numerical search for any ${\epsLL}_{ij}(\omega,\kk)$.
+If all tensor elements, ${\epsLL}_{ij}(\omega,\kk)$, can be approximated in the form of a polynomial expansion to a low order in $\kk$, the solution can again be found as roots of a characteristic polynomial. The degree of this polynomial may be substantially higher than in Eq. (\ref{eq_dispdet}), the dispersion curves can nonetheless be found by a brutal-force numerical search. %% ?? for any ${\epsLL}_{ij}(\omega,\kk)$.
 %}}}
 \paragraph{How a local dielectric manifests in the Landau-Lifshitz model} %{{{
 \begin{figure}[h!] \caption{Dispersion curves for three different examples of local media, comparing the local and Landau-Lifshitz representation of constitutive parameters. Three rows show media with \textbf{(a)} a  resonance in permittivity, \textbf{(b)} in permeability, and \textbf{(c)} simultaneously in both of them.\\
@@ -610,7 +610,7 @@ Left column: Local parameters $\epsrl(\omega)$, $\murl(\omega)$ as functions of 
 
 The dispersion curves predicted by the classical and Landau-Lifshitz representations of the constitutive parameters for local media in Eq. (\ref{eq_epsmusd3}) are mathematically identical. This is illustrated by Fig. \ref{fg_dcll} on three examples: of a medium with (\ref{fg_dcll}a) an electric resonance, with (\ref{fg_dcll}b) a magnetic resonance and (\ref{fg_dcll}c) with both resonances overlapping. 
 
-The left column in Fig. \ref{fg_dcll} shows the \textit{local} permittivity $\epsrl(\omega)$ and permeability $\murl(\omega)$.
+The plots in the left column in Fig. \ref{fg_dcll} show the \textit{local} permittivity $\epsrl(\omega)$ and permeability $\murl(\omega)$.
 Its right column features a thin black contour connecting all points where the dispersion equation (\ref{eq_dispdetLL}) was found to hold by a numerical search.
 This is complemented by the Landau-Lifshitz permittivity $\epsLL(\omega, k)$ as a background colour map with blue tone for negative values and red for positive ones. 
 %As a confirmation of the compatibility of the Landau-Lifshitz model with the classical one,
